// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeSelect component Render TreeSelect correctly 1`] = `
<TreeSelect
  checkAllKey="-1"
  checkAllTitle="Check all"
  maxTagCount={10}
  showCheckAll={false}
  treeDefaultExpandedKeys={Array []}
>
  <ForwardRef(InternalTreeSelect)
    className="dw-tree-select"
    dropdownClassName="dw-tree-select__dropdown"
    maxTagCount={10}
    treeDefaultExpandedKeys={Array []}
  >
    <TreeSelect
      choiceTransitionName=""
      className="ant-tree-select dw-tree-select"
      clearIcon={<ForwardRef(CloseCircleFilled) />}
      dropdownClassName="dw-tree-select__dropdown ant-tree-select-dropdown"
      inputIcon={[Function]}
      listHeight={256}
      listItemHeight={26}
      maxTagCount={10}
      notFoundContent={
        <Context.Consumer>
          [Function]
        </Context.Consumer>
      }
      prefixCls="ant-select"
      removeIcon={<ForwardRef(CloseOutlined) />}
      showTreeIcon={false}
      switcherIcon={[Function]}
      transitionName="slide-up"
      treeDefaultExpandedKeys={Array []}
      treeMotion={null}
    >
      <ForwardRef
        choiceTransitionName=""
        className="ant-tree-select dw-tree-select"
        clearIcon={<ForwardRef(CloseCircleFilled) />}
        dropdownClassName="dw-tree-select__dropdown ant-tree-select-dropdown"
        inputIcon={[Function]}
        listHeight={256}
        listItemHeight={26}
        maxTagCount={10}
        notFoundContent={
          <Context.Consumer>
            [Function]
          </Context.Consumer>
        }
        prefixCls="ant-select"
        removeIcon={<ForwardRef(CloseOutlined) />}
        showTreeIcon={false}
        switcherIcon={[Function]}
        transitionName="slide-up"
        treeDefaultExpandedKeys={Array []}
        treeMotion={null}
      >
        <Select
          choiceTransitionName=""
          className="ant-tree-select dw-tree-select"
          clearIcon={<ForwardRef(CloseCircleFilled) />}
          dropdownClassName="dw-tree-select__dropdown ant-tree-select-dropdown"
          inputIcon={[Function]}
          internalProps={
            Object {
              "mark": "RC_SELECT_INTERNAL_PROPS_MARK",
              "onClear": [Function],
              "onRawDeselect": [Function],
              "onRawSelect": [Function],
              "skipTriggerChange": true,
              "skipTriggerSelect": true,
            }
          }
          labelInValue={true}
          listHeight={256}
          listItemHeight={26}
          maxTagCount={10}
          mode={null}
          notFoundContent={
            <Context.Consumer>
              [Function]
            </Context.Consumer>
          }
          onChange={null}
          onDeselect={null}
          onDropdownVisibleChange={[Function]}
          onSelect={null}
          optionFilterProp="value"
          optionLabelProp={null}
          prefixCls="ant-select"
          removeIcon={<ForwardRef(CloseOutlined) />}
          showTreeIcon={false}
          switcherIcon={[Function]}
          transitionName="slide-up"
          treeDefaultExpandedKeys={Array []}
          treeMotion={null}
          value={Array []}
        >
          <div
            className="ant-select ant-tree-select dw-tree-select ant-select-single ant-select-show-arrow"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
          >
            <SelectTrigger
              containerWidth={null}
              dropdownClassName="dw-tree-select__dropdown ant-tree-select-dropdown"
              empty={true}
              getTriggerDOMNode={[Function]}
              popupElement={
                <ForwardRef(OptionList)
                  childrenAsData={true}
                  defaultActiveFirstOption={true}
                  flattenOptions={Array []}
                  height={256}
                  id="rc_select_TEST_OR_SSR"
                  itemHeight={26}
                  multiple={false}
                  notFoundContent={
                    <Context.Consumer>
                      [Function]
                    </Context.Consumer>
                  }
                  onActiveValue={[Function]}
                  onMouseEnter={[Function]}
                  onSelect={[Function]}
                  onToggleOpen={[Function]}
                  options={Array []}
                  prefixCls="ant-select"
                  searchValue=""
                  values={Set {}}
                  virtual={true}
                />
              }
              prefixCls="ant-select"
              transitionName="slide-up"
            >
              <Trigger
                action={Array []}
                afterPopupVisibleChange={[Function]}
                autoDestroy={false}
                blurDelay={0.15}
                builtinPlacements={
                  Object {
                    "bottomLeft": Object {
                      "offset": Array [
                        0,
                        4,
                      ],
                      "overflow": Object {
                        "adjustX": 0,
                        "adjustY": 1,
                      },
                      "points": Array [
                        "tl",
                        "bl",
                      ],
                    },
                    "bottomRight": Object {
                      "offset": Array [
                        0,
                        4,
                      ],
                      "overflow": Object {
                        "adjustX": 0,
                        "adjustY": 1,
                      },
                      "points": Array [
                        "tr",
                        "br",
                      ],
                    },
                    "topLeft": Object {
                      "offset": Array [
                        0,
                        -4,
                      ],
                      "overflow": Object {
                        "adjustX": 0,
                        "adjustY": 1,
                      },
                      "points": Array [
                        "bl",
                        "tl",
                      ],
                    },
                    "topRight": Object {
                      "offset": Array [
                        0,
                        -4,
                      ],
                      "overflow": Object {
                        "adjustX": 0,
                        "adjustY": 1,
                      },
                      "points": Array [
                        "br",
                        "tr",
                      ],
                    },
                  }
                }
                defaultPopupVisible={false}
                destroyPopupOnHide={false}
                focusDelay={0}
                getDocument={[Function]}
                getPopupClassNameFromAlign={[Function]}
                getTriggerDOMNode={[Function]}
                hideAction={Array []}
                mask={false}
                maskClosable={true}
                mouseEnterDelay={0}
                mouseLeaveDelay={0.1}
                onPopupAlign={[Function]}
                onPopupVisibleChange={[Function]}
                popup={
                  <div>
                    <ForwardRef(OptionList)
                      childrenAsData={true}
                      defaultActiveFirstOption={true}
                      flattenOptions={Array []}
                      height={256}
                      id="rc_select_TEST_OR_SSR"
                      itemHeight={26}
                      multiple={false}
                      notFoundContent={
                        <Context.Consumer>
                          [Function]
                        </Context.Consumer>
                      }
                      onActiveValue={[Function]}
                      onMouseEnter={[Function]}
                      onSelect={[Function]}
                      onToggleOpen={[Function]}
                      options={Array []}
                      prefixCls="ant-select"
                      searchValue=""
                      values={Set {}}
                      virtual={true}
                    />
                  </div>
                }
                popupAlign={Object {}}
                popupClassName="dw-tree-select__dropdown ant-tree-select-dropdown ant-select-dropdown-empty"
                popupPlacement="bottomLeft"
                popupStyle={
                  Object {
                    "minWidth": null,
                    "width": null,
                  }
                }
                popupTransitionName="slide-up"
                prefixCls="ant-select-dropdown"
                showAction={Array []}
              >
                <Selector
                  accessibilityIndex={0}
                  activeValue={null}
                  choiceTransitionName=""
                  className="ant-tree-select dw-tree-select"
                  clearIcon={<ForwardRef(CloseCircleFilled) />}
                  domRef={
                    Object {
                      "current": <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                            aria-autocomplete="list"
                            aria-controls="rc_select_TEST_OR_SSR_list"
                            aria-haspopup="listbox"
                            aria-owns="rc_select_TEST_OR_SSR_list"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="rc_select_TEST_OR_SSR"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-placeholder"
                        />
                      </div>,
                    }
                  }
                  dropdownClassName="dw-tree-select__dropdown ant-tree-select-dropdown"
                  id="rc_select_TEST_OR_SSR"
                  inputElement={null}
                  inputIcon={[Function]}
                  internalProps={
                    Object {
                      "mark": "RC_SELECT_INTERNAL_PROPS_MARK",
                      "onClear": [Function],
                      "onRawDeselect": [Function],
                      "onRawSelect": [Function],
                      "skipTriggerChange": true,
                      "skipTriggerSelect": true,
                    }
                  }
                  key="trigger"
                  labelInValue={true}
                  listHeight={256}
                  listItemHeight={26}
                  maxTagCount={10}
                  mode={null}
                  multiple={false}
                  notFoundContent={
                    <Context.Consumer>
                      [Function]
                    </Context.Consumer>
                  }
                  onChange={null}
                  onDeselect={null}
                  onDropdownVisibleChange={[Function]}
                  onSearch={[Function]}
                  onSearchSubmit={[Function]}
                  onSelect={[Function]}
                  onToggleOpen={[Function]}
                  optionFilterProp="value"
                  optionLabelProp={null}
                  prefixCls="ant-select"
                  removeIcon={<ForwardRef(CloseOutlined) />}
                  searchValue=""
                  showSearch={false}
                  showTreeIcon={false}
                  switcherIcon={[Function]}
                  tokenWithEnter={false}
                  transitionName="slide-up"
                  treeDefaultExpandedKeys={Array []}
                  treeMotion={null}
                  value={Array []}
                  values={Array []}
                >
                  <div
                    className="ant-select-selector"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                  >
                    <SingleSelector
                      accessibilityIndex={0}
                      activeValue={null}
                      choiceTransitionName=""
                      className="ant-tree-select dw-tree-select"
                      clearIcon={<ForwardRef(CloseCircleFilled) />}
                      domRef={
                        Object {
                          "current": <div
                            class="ant-select-selector"
                          >
                            <span
                              class="ant-select-selection-search"
                            >
                              <input
                                aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                                aria-autocomplete="list"
                                aria-controls="rc_select_TEST_OR_SSR_list"
                                aria-haspopup="listbox"
                                aria-owns="rc_select_TEST_OR_SSR_list"
                                autocomplete="off"
                                class="ant-select-selection-search-input"
                                id="rc_select_TEST_OR_SSR"
                                readonly=""
                                role="combobox"
                                style="opacity: 0;"
                                type="search"
                                unselectable="on"
                                value=""
                              />
                            </span>
                            <span
                              class="ant-select-selection-placeholder"
                            />
                          </div>,
                        }
                      }
                      dropdownClassName="dw-tree-select__dropdown ant-tree-select-dropdown"
                      id="rc_select_TEST_OR_SSR"
                      inputElement={null}
                      inputIcon={[Function]}
                      inputRef={
                        Object {
                          "current": <input
                            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                            aria-autocomplete="list"
                            aria-controls="rc_select_TEST_OR_SSR_list"
                            aria-haspopup="listbox"
                            aria-owns="rc_select_TEST_OR_SSR_list"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="rc_select_TEST_OR_SSR"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />,
                        }
                      }
                      internalProps={
                        Object {
                          "mark": "RC_SELECT_INTERNAL_PROPS_MARK",
                          "onClear": [Function],
                          "onRawDeselect": [Function],
                          "onRawSelect": [Function],
                          "skipTriggerChange": true,
                          "skipTriggerSelect": true,
                        }
                      }
                      labelInValue={true}
                      listHeight={256}
                      listItemHeight={26}
                      maxTagCount={10}
                      mode={null}
                      multiple={false}
                      notFoundContent={
                        <Context.Consumer>
                          [Function]
                        </Context.Consumer>
                      }
                      onChange={null}
                      onDeselect={null}
                      onDropdownVisibleChange={[Function]}
                      onInputChange={[Function]}
                      onInputCompositionEnd={[Function]}
                      onInputCompositionStart={[Function]}
                      onInputKeyDown={[Function]}
                      onInputMouseDown={[Function]}
                      onInputPaste={[Function]}
                      onSearch={[Function]}
                      onSearchSubmit={[Function]}
                      onSelect={[Function]}
                      onToggleOpen={[Function]}
                      optionFilterProp="value"
                      optionLabelProp={null}
                      prefixCls="ant-select"
                      removeIcon={<ForwardRef(CloseOutlined) />}
                      searchValue=""
                      showSearch={false}
                      showTreeIcon={false}
                      switcherIcon={[Function]}
                      tokenWithEnter={false}
                      transitionName="slide-up"
                      treeDefaultExpandedKeys={Array []}
                      treeMotion={null}
                      value={Array []}
                      values={Array []}
                    >
                      <span
                        className="ant-select-selection-search"
                      >
                        <Input
                          accessibilityIndex={0}
                          attrs={Object {}}
                          editable={false}
                          id="rc_select_TEST_OR_SSR"
                          inputElement={null}
                          onChange={[Function]}
                          onCompositionEnd={[Function]}
                          onCompositionStart={[Function]}
                          onKeyDown={[Function]}
                          onMouseDown={[Function]}
                          onPaste={[Function]}
                          prefixCls="ant-select"
                          value=""
                        >
                          <input
                            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                            aria-autocomplete="list"
                            aria-controls="rc_select_TEST_OR_SSR_list"
                            aria-haspopup="listbox"
                            aria-owns="rc_select_TEST_OR_SSR_list"
                            autoComplete="off"
                            className="ant-select-selection-search-input"
                            id="rc_select_TEST_OR_SSR"
                            onChange={[Function]}
                            onCompositionEnd={[Function]}
                            onCompositionStart={[Function]}
                            onKeyDown={[Function]}
                            onMouseDown={[Function]}
                            onPaste={[Function]}
                            readOnly={true}
                            role="combobox"
                            style={
                              Object {
                                "opacity": 0,
                              }
                            }
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </Input>
                      </span>
                      <span
                        className="ant-select-selection-placeholder"
                      />
                    </SingleSelector>
                  </div>
                </Selector>
              </Trigger>
            </SelectTrigger>
            <TransBtn
              className="ant-select-arrow"
              customizeIcon={[Function]}
              customizeIconProps={
                Object {
                  "focused": false,
                  "loading": undefined,
                  "open": undefined,
                  "searchValue": "",
                  "showSearch": false,
                }
              }
            >
              <span
                aria-hidden={true}
                className="ant-select-arrow"
                onMouseDown={[Function]}
                style={
                  Object {
                    "WebkitUserSelect": "none",
                    "userSelect": "none",
                  }
                }
                unselectable="on"
              >
                <ForwardRef(DownOutlined)
                  className="ant-select-suffix"
                >
                  <AntdIcon
                    className="ant-select-suffix"
                    icon={
                      Object {
                        "icon": Object {
                          "attrs": Object {
                            "focusable": "false",
                            "viewBox": "64 64 896 896",
                          },
                          "children": Array [
                            Object {
                              "attrs": Object {
                                "d": "M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z",
                              },
                              "tag": "path",
                            },
                          ],
                          "tag": "svg",
                        },
                        "name": "down",
                        "theme": "outlined",
                      }
                    }
                  >
                    <span
                      aria-label="down"
                      className="anticon anticon-down ant-select-suffix"
                      role="img"
                    >
                      <IconReact
                        icon={
                          Object {
                            "icon": Object {
                              "attrs": Object {
                                "focusable": "false",
                                "viewBox": "64 64 896 896",
                              },
                              "children": Array [
                                Object {
                                  "attrs": Object {
                                    "d": "M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z",
                                  },
                                  "tag": "path",
                                },
                              ],
                              "tag": "svg",
                            },
                            "name": "down",
                            "theme": "outlined",
                          }
                        }
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          key="svg-down"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            key="svg-down-svg-0"
                          />
                        </svg>
                      </IconReact>
                    </span>
                  </AntdIcon>
                </ForwardRef(DownOutlined)>
              </span>
            </TransBtn>
          </div>
        </Select>
      </ForwardRef>
    </TreeSelect>
  </ForwardRef(InternalTreeSelect)>
</TreeSelect>
`;

exports[`TreeSelect component Render TreeSelect with check all 1`] = `
<TreeSelect
  checkAllKey="-1"
  checkAllTitle="Check all"
  maxTagCount={10}
  showCheckAll={true}
  treeDefaultExpandedKeys={
    Array [
      "-1",
    ]
  }
>
  <ForwardRef(InternalTreeSelect)
    className="dw-tree-select"
    dropdownClassName="dw-tree-select__dropdown"
    maxTagCount={10}
    treeData={
      Array [
        Object {
          "children": undefined,
          "className": "tree-check-all",
          "key": "-1",
          "title": "Check all",
        },
      ]
    }
    treeDefaultExpandedKeys={
      Array [
        "-1",
      ]
    }
  >
    <TreeSelect
      choiceTransitionName=""
      className="ant-tree-select dw-tree-select"
      clearIcon={<ForwardRef(CloseCircleFilled) />}
      dropdownClassName="dw-tree-select__dropdown ant-tree-select-dropdown"
      inputIcon={[Function]}
      listHeight={256}
      listItemHeight={26}
      maxTagCount={10}
      notFoundContent={
        <Context.Consumer>
          [Function]
        </Context.Consumer>
      }
      prefixCls="ant-select"
      removeIcon={<ForwardRef(CloseOutlined) />}
      showTreeIcon={false}
      switcherIcon={[Function]}
      transitionName="slide-up"
      treeData={
        Array [
          Object {
            "children": undefined,
            "className": "tree-check-all",
            "key": "-1",
            "title": "Check all",
          },
        ]
      }
      treeDefaultExpandedKeys={
        Array [
          "-1",
        ]
      }
      treeMotion={null}
    >
      <ForwardRef
        choiceTransitionName=""
        className="ant-tree-select dw-tree-select"
        clearIcon={<ForwardRef(CloseCircleFilled) />}
        dropdownClassName="dw-tree-select__dropdown ant-tree-select-dropdown"
        inputIcon={[Function]}
        listHeight={256}
        listItemHeight={26}
        maxTagCount={10}
        notFoundContent={
          <Context.Consumer>
            [Function]
          </Context.Consumer>
        }
        prefixCls="ant-select"
        removeIcon={<ForwardRef(CloseOutlined) />}
        showTreeIcon={false}
        switcherIcon={[Function]}
        transitionName="slide-up"
        treeData={
          Array [
            Object {
              "children": undefined,
              "className": "tree-check-all",
              "key": "-1",
              "title": "Check all",
            },
          ]
        }
        treeDefaultExpandedKeys={
          Array [
            "-1",
          ]
        }
        treeMotion={null}
      >
        <Select
          choiceTransitionName=""
          className="ant-tree-select dw-tree-select"
          clearIcon={<ForwardRef(CloseCircleFilled) />}
          dropdownClassName="dw-tree-select__dropdown ant-tree-select-dropdown"
          inputIcon={[Function]}
          internalProps={
            Object {
              "mark": "RC_SELECT_INTERNAL_PROPS_MARK",
              "onClear": [Function],
              "onRawDeselect": [Function],
              "onRawSelect": [Function],
              "skipTriggerChange": true,
              "skipTriggerSelect": true,
            }
          }
          labelInValue={true}
          listHeight={256}
          listItemHeight={26}
          maxTagCount={10}
          mode={null}
          notFoundContent={
            <Context.Consumer>
              [Function]
            </Context.Consumer>
          }
          onChange={null}
          onDeselect={null}
          onDropdownVisibleChange={[Function]}
          onSelect={null}
          optionFilterProp="value"
          optionLabelProp={null}
          options={
            Array [
              Object {
                "children": Array [],
                "className": "tree-check-all",
                "key": "-1",
                "title": "Check all",
                "value": "-1",
              },
            ]
          }
          prefixCls="ant-select"
          removeIcon={<ForwardRef(CloseOutlined) />}
          showTreeIcon={false}
          switcherIcon={[Function]}
          transitionName="slide-up"
          treeData={
            Array [
              Object {
                "children": undefined,
                "className": "tree-check-all",
                "key": "-1",
                "title": "Check all",
              },
            ]
          }
          treeDefaultExpandedKeys={
            Array [
              "-1",
            ]
          }
          treeMotion={null}
          value={Array []}
        >
          <div
            className="ant-select ant-tree-select dw-tree-select ant-select-single ant-select-show-arrow"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
          >
            <SelectTrigger
              containerWidth={null}
              dropdownClassName="dw-tree-select__dropdown ant-tree-select-dropdown"
              empty={false}
              getTriggerDOMNode={[Function]}
              popupElement={
                <ForwardRef(OptionList)
                  childrenAsData={false}
                  defaultActiveFirstOption={true}
                  flattenOptions={
                    Array [
                      Object {
                        "data": Object {
                          "children": Array [],
                          "className": "tree-check-all",
                          "key": "-1",
                          "title": "Check all",
                          "value": "-1",
                        },
                        "key": "-1",
                        "level": 0,
                      },
                    ]
                  }
                  height={256}
                  id="rc_select_TEST_OR_SSR"
                  itemHeight={26}
                  multiple={false}
                  notFoundContent={
                    <Context.Consumer>
                      [Function]
                    </Context.Consumer>
                  }
                  onActiveValue={[Function]}
                  onMouseEnter={[Function]}
                  onSelect={[Function]}
                  onToggleOpen={[Function]}
                  options={
                    Array [
                      Object {
                        "children": Array [],
                        "className": "tree-check-all",
                        "key": "-1",
                        "title": "Check all",
                        "value": "-1",
                      },
                    ]
                  }
                  prefixCls="ant-select"
                  searchValue=""
                  values={Set {}}
                  virtual={true}
                />
              }
              prefixCls="ant-select"
              transitionName="slide-up"
            >
              <Trigger
                action={Array []}
                afterPopupVisibleChange={[Function]}
                autoDestroy={false}
                blurDelay={0.15}
                builtinPlacements={
                  Object {
                    "bottomLeft": Object {
                      "offset": Array [
                        0,
                        4,
                      ],
                      "overflow": Object {
                        "adjustX": 0,
                        "adjustY": 1,
                      },
                      "points": Array [
                        "tl",
                        "bl",
                      ],
                    },
                    "bottomRight": Object {
                      "offset": Array [
                        0,
                        4,
                      ],
                      "overflow": Object {
                        "adjustX": 0,
                        "adjustY": 1,
                      },
                      "points": Array [
                        "tr",
                        "br",
                      ],
                    },
                    "topLeft": Object {
                      "offset": Array [
                        0,
                        -4,
                      ],
                      "overflow": Object {
                        "adjustX": 0,
                        "adjustY": 1,
                      },
                      "points": Array [
                        "bl",
                        "tl",
                      ],
                    },
                    "topRight": Object {
                      "offset": Array [
                        0,
                        -4,
                      ],
                      "overflow": Object {
                        "adjustX": 0,
                        "adjustY": 1,
                      },
                      "points": Array [
                        "br",
                        "tr",
                      ],
                    },
                  }
                }
                defaultPopupVisible={false}
                destroyPopupOnHide={false}
                focusDelay={0}
                getDocument={[Function]}
                getPopupClassNameFromAlign={[Function]}
                getTriggerDOMNode={[Function]}
                hideAction={Array []}
                mask={false}
                maskClosable={true}
                mouseEnterDelay={0}
                mouseLeaveDelay={0.1}
                onPopupAlign={[Function]}
                onPopupVisibleChange={[Function]}
                popup={
                  <div>
                    <ForwardRef(OptionList)
                      childrenAsData={false}
                      defaultActiveFirstOption={true}
                      flattenOptions={
                        Array [
                          Object {
                            "data": Object {
                              "children": Array [],
                              "className": "tree-check-all",
                              "key": "-1",
                              "title": "Check all",
                              "value": "-1",
                            },
                            "key": "-1",
                            "level": 0,
                          },
                        ]
                      }
                      height={256}
                      id="rc_select_TEST_OR_SSR"
                      itemHeight={26}
                      multiple={false}
                      notFoundContent={
                        <Context.Consumer>
                          [Function]
                        </Context.Consumer>
                      }
                      onActiveValue={[Function]}
                      onMouseEnter={[Function]}
                      onSelect={[Function]}
                      onToggleOpen={[Function]}
                      options={
                        Array [
                          Object {
                            "children": Array [],
                            "className": "tree-check-all",
                            "key": "-1",
                            "title": "Check all",
                            "value": "-1",
                          },
                        ]
                      }
                      prefixCls="ant-select"
                      searchValue=""
                      values={Set {}}
                      virtual={true}
                    />
                  </div>
                }
                popupAlign={Object {}}
                popupClassName="dw-tree-select__dropdown ant-tree-select-dropdown"
                popupPlacement="bottomLeft"
                popupStyle={
                  Object {
                    "minWidth": null,
                    "width": null,
                  }
                }
                popupTransitionName="slide-up"
                prefixCls="ant-select-dropdown"
                showAction={Array []}
              >
                <Selector
                  accessibilityIndex={0}
                  activeValue={null}
                  choiceTransitionName=""
                  className="ant-tree-select dw-tree-select"
                  clearIcon={<ForwardRef(CloseCircleFilled) />}
                  domRef={
                    Object {
                      "current": <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                            aria-autocomplete="list"
                            aria-controls="rc_select_TEST_OR_SSR_list"
                            aria-haspopup="listbox"
                            aria-owns="rc_select_TEST_OR_SSR_list"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="rc_select_TEST_OR_SSR"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-placeholder"
                        />
                      </div>,
                    }
                  }
                  dropdownClassName="dw-tree-select__dropdown ant-tree-select-dropdown"
                  id="rc_select_TEST_OR_SSR"
                  inputElement={null}
                  inputIcon={[Function]}
                  internalProps={
                    Object {
                      "mark": "RC_SELECT_INTERNAL_PROPS_MARK",
                      "onClear": [Function],
                      "onRawDeselect": [Function],
                      "onRawSelect": [Function],
                      "skipTriggerChange": true,
                      "skipTriggerSelect": true,
                    }
                  }
                  key="trigger"
                  labelInValue={true}
                  listHeight={256}
                  listItemHeight={26}
                  maxTagCount={10}
                  mode={null}
                  multiple={false}
                  notFoundContent={
                    <Context.Consumer>
                      [Function]
                    </Context.Consumer>
                  }
                  onChange={null}
                  onDeselect={null}
                  onDropdownVisibleChange={[Function]}
                  onSearch={[Function]}
                  onSearchSubmit={[Function]}
                  onSelect={[Function]}
                  onToggleOpen={[Function]}
                  optionFilterProp="value"
                  optionLabelProp={null}
                  options={
                    Array [
                      Object {
                        "children": Array [],
                        "className": "tree-check-all",
                        "key": "-1",
                        "title": "Check all",
                        "value": "-1",
                      },
                    ]
                  }
                  prefixCls="ant-select"
                  removeIcon={<ForwardRef(CloseOutlined) />}
                  searchValue=""
                  showSearch={false}
                  showTreeIcon={false}
                  switcherIcon={[Function]}
                  tokenWithEnter={false}
                  transitionName="slide-up"
                  treeData={
                    Array [
                      Object {
                        "children": undefined,
                        "className": "tree-check-all",
                        "key": "-1",
                        "title": "Check all",
                      },
                    ]
                  }
                  treeDefaultExpandedKeys={
                    Array [
                      "-1",
                    ]
                  }
                  treeMotion={null}
                  value={Array []}
                  values={Array []}
                >
                  <div
                    className="ant-select-selector"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                  >
                    <SingleSelector
                      accessibilityIndex={0}
                      activeValue={null}
                      choiceTransitionName=""
                      className="ant-tree-select dw-tree-select"
                      clearIcon={<ForwardRef(CloseCircleFilled) />}
                      domRef={
                        Object {
                          "current": <div
                            class="ant-select-selector"
                          >
                            <span
                              class="ant-select-selection-search"
                            >
                              <input
                                aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                                aria-autocomplete="list"
                                aria-controls="rc_select_TEST_OR_SSR_list"
                                aria-haspopup="listbox"
                                aria-owns="rc_select_TEST_OR_SSR_list"
                                autocomplete="off"
                                class="ant-select-selection-search-input"
                                id="rc_select_TEST_OR_SSR"
                                readonly=""
                                role="combobox"
                                style="opacity: 0;"
                                type="search"
                                unselectable="on"
                                value=""
                              />
                            </span>
                            <span
                              class="ant-select-selection-placeholder"
                            />
                          </div>,
                        }
                      }
                      dropdownClassName="dw-tree-select__dropdown ant-tree-select-dropdown"
                      id="rc_select_TEST_OR_SSR"
                      inputElement={null}
                      inputIcon={[Function]}
                      inputRef={
                        Object {
                          "current": <input
                            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                            aria-autocomplete="list"
                            aria-controls="rc_select_TEST_OR_SSR_list"
                            aria-haspopup="listbox"
                            aria-owns="rc_select_TEST_OR_SSR_list"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="rc_select_TEST_OR_SSR"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />,
                        }
                      }
                      internalProps={
                        Object {
                          "mark": "RC_SELECT_INTERNAL_PROPS_MARK",
                          "onClear": [Function],
                          "onRawDeselect": [Function],
                          "onRawSelect": [Function],
                          "skipTriggerChange": true,
                          "skipTriggerSelect": true,
                        }
                      }
                      labelInValue={true}
                      listHeight={256}
                      listItemHeight={26}
                      maxTagCount={10}
                      mode={null}
                      multiple={false}
                      notFoundContent={
                        <Context.Consumer>
                          [Function]
                        </Context.Consumer>
                      }
                      onChange={null}
                      onDeselect={null}
                      onDropdownVisibleChange={[Function]}
                      onInputChange={[Function]}
                      onInputCompositionEnd={[Function]}
                      onInputCompositionStart={[Function]}
                      onInputKeyDown={[Function]}
                      onInputMouseDown={[Function]}
                      onInputPaste={[Function]}
                      onSearch={[Function]}
                      onSearchSubmit={[Function]}
                      onSelect={[Function]}
                      onToggleOpen={[Function]}
                      optionFilterProp="value"
                      optionLabelProp={null}
                      options={
                        Array [
                          Object {
                            "children": Array [],
                            "className": "tree-check-all",
                            "key": "-1",
                            "title": "Check all",
                            "value": "-1",
                          },
                        ]
                      }
                      prefixCls="ant-select"
                      removeIcon={<ForwardRef(CloseOutlined) />}
                      searchValue=""
                      showSearch={false}
                      showTreeIcon={false}
                      switcherIcon={[Function]}
                      tokenWithEnter={false}
                      transitionName="slide-up"
                      treeData={
                        Array [
                          Object {
                            "children": undefined,
                            "className": "tree-check-all",
                            "key": "-1",
                            "title": "Check all",
                          },
                        ]
                      }
                      treeDefaultExpandedKeys={
                        Array [
                          "-1",
                        ]
                      }
                      treeMotion={null}
                      value={Array []}
                      values={Array []}
                    >
                      <span
                        className="ant-select-selection-search"
                      >
                        <Input
                          accessibilityIndex={0}
                          attrs={Object {}}
                          editable={false}
                          id="rc_select_TEST_OR_SSR"
                          inputElement={null}
                          onChange={[Function]}
                          onCompositionEnd={[Function]}
                          onCompositionStart={[Function]}
                          onKeyDown={[Function]}
                          onMouseDown={[Function]}
                          onPaste={[Function]}
                          prefixCls="ant-select"
                          value=""
                        >
                          <input
                            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                            aria-autocomplete="list"
                            aria-controls="rc_select_TEST_OR_SSR_list"
                            aria-haspopup="listbox"
                            aria-owns="rc_select_TEST_OR_SSR_list"
                            autoComplete="off"
                            className="ant-select-selection-search-input"
                            id="rc_select_TEST_OR_SSR"
                            onChange={[Function]}
                            onCompositionEnd={[Function]}
                            onCompositionStart={[Function]}
                            onKeyDown={[Function]}
                            onMouseDown={[Function]}
                            onPaste={[Function]}
                            readOnly={true}
                            role="combobox"
                            style={
                              Object {
                                "opacity": 0,
                              }
                            }
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </Input>
                      </span>
                      <span
                        className="ant-select-selection-placeholder"
                      />
                    </SingleSelector>
                  </div>
                </Selector>
              </Trigger>
            </SelectTrigger>
            <TransBtn
              className="ant-select-arrow"
              customizeIcon={[Function]}
              customizeIconProps={
                Object {
                  "focused": false,
                  "loading": undefined,
                  "open": undefined,
                  "searchValue": "",
                  "showSearch": false,
                }
              }
            >
              <span
                aria-hidden={true}
                className="ant-select-arrow"
                onMouseDown={[Function]}
                style={
                  Object {
                    "WebkitUserSelect": "none",
                    "userSelect": "none",
                  }
                }
                unselectable="on"
              >
                <ForwardRef(DownOutlined)
                  className="ant-select-suffix"
                >
                  <AntdIcon
                    className="ant-select-suffix"
                    icon={
                      Object {
                        "icon": Object {
                          "attrs": Object {
                            "focusable": "false",
                            "viewBox": "64 64 896 896",
                          },
                          "children": Array [
                            Object {
                              "attrs": Object {
                                "d": "M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z",
                              },
                              "tag": "path",
                            },
                          ],
                          "tag": "svg",
                        },
                        "name": "down",
                        "theme": "outlined",
                      }
                    }
                  >
                    <span
                      aria-label="down"
                      className="anticon anticon-down ant-select-suffix"
                      role="img"
                    >
                      <IconReact
                        icon={
                          Object {
                            "icon": Object {
                              "attrs": Object {
                                "focusable": "false",
                                "viewBox": "64 64 896 896",
                              },
                              "children": Array [
                                Object {
                                  "attrs": Object {
                                    "d": "M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z",
                                  },
                                  "tag": "path",
                                },
                              ],
                              "tag": "svg",
                            },
                            "name": "down",
                            "theme": "outlined",
                          }
                        }
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          key="svg-down"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            key="svg-down-svg-0"
                          />
                        </svg>
                      </IconReact>
                    </span>
                  </AntdIcon>
                </ForwardRef(DownOutlined)>
              </span>
            </TransBtn>
          </div>
        </Select>
      </ForwardRef>
    </TreeSelect>
  </ForwardRef(InternalTreeSelect)>
</TreeSelect>
`;
